# reasoning-arithmetic-jax

./: README.md
frontend/: README.md  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: ComparisonUI.tsx  ModelPanel.tsx  parser.ts  streamModel.ts
frontend/src/types/: stream_state.ts
reasoning-arithmetic-jax/: README.md  inference.py  pyproject.toml  server.py  train_grpo.py  train_sft.py
reasoning-arithmetic-jax/configs/: grpo_train.yaml  sft_train.yaml
reasoning-arithmetic-jax/rewards/: reward_func.py
reasoning-arithmetic-jax/train/: grpo_train_config.py  make_optimizer.py  sft_train_config.py
reasoning-arithmetic-jax/utils/: batch_iterator.py  functions.py  loading.py  sampling.py  sharding.py  special_tokens.py  synthetic_math.py
