[project]
name = "reasoning-arithmetic-jax"
version = "0.1.0"
description = "jax implementation for reasoning model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "fastapi>=0.128.3",
    "flax>=0.12.3",
    "jax[cuda12]>=0.9.0",
    "matplotlib>=3.10.8",
    "optax>=0.2.6",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "uvicorn>=0.40.0",
]
